--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body style="background-color:black; color:white">
 <h1>CHANGE THE WORLD</h1>
+<script scr="script.js"></script>
 </body>
 </html>
