--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>FABIO2020</title>
 </head>
 <body style="background-color:black; color:white">
-<h1>CHANGE THE WORLD</h1>
+<h1>WORLD</h1>
 </body>
 </html>
