--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
+  <script src="libraries/p5.js" type="text/javascript"></script>
+  <script src="libraries/p5.dom.js" type="text/javascript"></script>
+  <script src="libraries/p5.sound.js" type="text/javascript"></script>
+  <script src="sketch.js" type="text/javascript"></script>
   <script scr="script.js"></script>
   <meta charset="UTF-8">
   <title>FABIO2020</title>
