--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <script src="libraries/p5.js" type="text/javascript"></script>
   <script src="libraries/p5.dom.js" type="text/javascript"></script>
   <script src="libraries/p5.sound.js" type="text/javascript"></script>
-  <script src="sketch.js" type="text/javascript"></script>
-  <script scr="script.js"></script>
+  <script src="script.js" type="text/javascript"></script>
   <meta charset="UTF-8">
   <title>FABIO2020</title>
 </head>
