--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <title>FABIO2020</title>
 </head>
 <body style="background-color:black; color:white">
-<h1>WORLD</h1>
+<h1>WORLD20</h1>
 </body>
 </html>
