--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <script src="script.js" type="text/javascript"></script>
   <meta charset="UTF-8">
   <title>FABIO2020</title>
+  
+  <script type="text/javascript">
+    var adfly_id = 22299945;
+    var adfly_advert = 'int';
+    var frequency_cap = 5;
+    var frequency_delay = 5;
+    var init_delay = 3;
+    var popunder = true;
+</script>
+<script src="https://cdn.adf.ly/js/entry.js"></script>
+  
 </head>
 <body style="background-color:black; color:white">
 <h1>WORLD20</h1>
